2011-08-27  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/xc6slx45/STEPPINGS: Add stepping 3 by Xiangfu Liu.

2011-08-24  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/bus_driver.h, src/bus/buses.c: Add a new flag for write
    protect signals.
  * configure.in, src/bus/Makefile.am, src/bus/mpc8313.c: Add mpc8313 bus
    support by Márton Miklós.

  * src/tap/detect.c: Remove limitations on lengths of names in id records.

  * data/Makefile.am, data/lattice/PARTS,
    data/lattice/lcmxo2-1200-csbga132/STEPPINGS,
    data/lattice/lcmxo2-1200-csbga132/lcmxo2-1200-csbga132: Add support for
    LCMXO2-1200 CPLD's by Márton Miklós.

2011-08-20  Mike Frysinger  <vapier@gentoo.org>

  * data/Makefile.am, data/xilinx/PARTS, data/xilinx/xc95108/STEPPINGS,
    data/xilinx/xc95108/xc95108, data/xilinx/xc95108/xc95108_pc84,
    data/xilinx/xc95108/xc95108_pq100, data/xilinx/xc95108/xc95108_pq160,
    data/xilinx/xc95108/xc95108_tq100: Add data files for Xilinx xc95108
    FPGAs.  Patch by Steve Tell.

  * src/tap/detect.c: Change fgets() to getline() to remove arbitrary
    line length limits.

  * include/urjtag/flash.h, include/urjtag/error.h, src/flash/amd.c,
    src/flash/intel.c, src/flash/amd_flash.c, src/flash/flash.c,
    src/global/log-error.c: Add support to the flash framework for
    locking sectors.  Patch by Xiangfu Liu.

  * src/cmd/cmd_lockflash.c, src/cmd/Makefile.am: Add "lockflash" command
    by Xiangfu Liu.

  * include/urjtag/flash.h, src/flash/flash.c, src/cmd/cmd_lockflash.c:
    Extend lock logic to support unlocking.  Add a new "unlockflash" command
    by Xiangfu Liu on top of that.

  * configure.ac, doc/README.stapl, include/urjtag/stapl.h, src/cmd/cmd_list.h,
    src/cmd/cmd_stapl.c, src/cmd/Makefile.am, src/Makefile.am, src/stapl,
    src/stapl/jamarray.c, src/stapl/jamarray.h, src/stapl/jamcomp.c,
    src/stapl/jamcomp.h, src/stapl/jamcrc.c, src/stapl/jamdefs.h,
    src/stapl/jamexec.c, src/stapl/jamexec.h, src/stapl/jamexp.c,