@@ -44,6 +44,7 @@ _URJ_BUS(bf518f_ezbrd)
 _URJ_BUS(bf51x)
 _URJ_BUS(bf526_ezkit)
 _URJ_BUS(bf527_ezkit)
+_URJ_BUS(bf527_sdp)
 _URJ_BUS(bf52x)
 _URJ_BUS(bf533_ezkit)
 _URJ_BUS(bf533_stamp)
